--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,7 @@ jobs:
             npm install
             #npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
+            npm audit fix
             npm audit --audit-level=critical
 
   scan-backend:
@@ -92,6 +93,7 @@ jobs:
             npm install
             #npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
+            npm audit fix
             npm audit --audit-level=critical
 workflows:
   default:
