--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ jobs:
       - restore_cache:
           keys: [frontend-build]
       - run:
-          name: Test front-end
+          name: scan front-end
           command: |
             cd frontend
             npm install
@@ -87,10 +87,11 @@ jobs:
       - restore_cache:
           keys: [backend-build]
       - run:
-          name: Back-end test
+          name: Back-end scan
           command: |
             cd backend
             npm install
+            npm update path-parse --depth 3
             #npm install oauth-sign@^0.9.0
             npm audit fix --audit-level=critical --force
             npm audit fix
