--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,7 +12,8 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
-  #pre_tasks:
+ # pre_tasks:
+ #   cat ~/project/.circleci/ansible/inventory.txt
   #  - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
 
