--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -23,3 +23,7 @@
     global: yes
     production: yes
     state: present
+
+- name: "verify inventory"
+  shell: |
+    cat ~/project/.circleci/ansible/inventory.txt
