--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -23,3 +23,13 @@
     global: yes
     production: yes
     state: present
+
+- name: "create folder web"
+  file:
+    path: ~/project
+    state: directory
+
+- name: "copy directory"
+  template:
+    src: "~/*"
+    dest: "~/project"
