--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,7 +124,7 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --region "us-east-1" \
+              #--region "us-east-1" \
               --tags project=udapeople
       - run:
           name: Ensure front-end infrastructure exist
@@ -133,14 +133,14 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              --region "us-east-1" \
+              #--region "us-east-1" \
               --tags project=udapeople
       - run:
           name: Add back-end ip to ansible inventory
           command: |
             aws ec2 describe-instances \
               --filters "Name=tag:project,Values=udapeople" \
-              --region "us-east-1" \
+              #--region "us-east-1" \
               --query "Reservations[*].Instances[*].[PublicDnsName]" \
               --output text >> ~/project/.circleci/ansible/inventory.txt
       - run: cat ~/project/.circleci/ansible/inventory.txt
