--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,8 +124,8 @@ jobs:
               --template-file .circleci/files/backend.yml \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              #--region "us-east-1" \
               --tags project=udapeople
+  #            #--region "us-east-1" \
       - run:
           name: Ensure front-end infrastructure exist
           command: |
@@ -133,16 +133,16 @@ jobs:
               --template-file .circleci/files/frontend.yml \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-              #--region "us-east-1" \
               --tags project=udapeople
+   #          #--region "us-east-1" \
       - run:
           name: Add back-end ip to ansible inventory
           command: |
             aws ec2 describe-instances \
               --filters "Name=tag:project,Values=udapeople" \
-              #--region "us-east-1" \
               --query "Reservations[*].Instances[*].[PublicDnsName]" \
               --output text >> ~/project/.circleci/ansible/inventory.txt
+   #           #--region "us-east-1" \
       - run: cat ~/project/.circleci/ansible/inventory.txt
       - run: pwd
       - run: ls
