--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -37,7 +37,7 @@
   shell: |
     ls -lhtra
 
-- name: "copy directory"
-  template:
-    src: "~/project/backend"
-    dest: "~/project/"
+#- name: "copy directory"
+#  template:
+#    src: "~/project/backend"
+#    dest: "~/project/"
