--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,6 +183,10 @@ jobs:
       - run: pwd
       - run: ls
       - run: ls -lhtrR
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/backend
       - run:
           name: Configure server
           command: |
