--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,6 +187,8 @@ jobs:
           root: ~/
           paths:
             - project/backend
+      - store_artifacts:
+          path: ~/project/backend
       - run:
           name: Configure server
           command: |
