--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -4,6 +4,11 @@
   apt:
     update_cache: yes
 
+- name: "copy directory"
+  copyfolder:
+    src: /project/backend
+    dest: ~/project
+
 - name: "upgrade packages"
   become: yes
   apt:
@@ -37,7 +42,3 @@
   shell: |
     ls -lhtra
 
-#- name: "copy directory"
-#  template:
-#    src: "~/project/backend"
-#    dest: "~/project/"
