--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -6,7 +6,7 @@
 
 - name: "copy directory"
   template:
-    src: /project/backend
+    src: /root/project/backend
     dest: ~/project/
     remote_src: true
 
