--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -12,13 +12,19 @@
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
 
- # pre_tasks:
- #   cat ~/project/.circleci/ansible/inventory.txt
-  #  - name: "wait 600 seconds for target connection to become reachable/usable."
+  pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
+      wait_for_connection:
+        timeout: 600
+    - name: "install python  for Ansible."
+      # Your code here
+      become: true
+      apt:
+        name: ["python3"]
+        state: latest
+        update_cache: yes
 
-    #- name: "install python for Ansible."
-      # Your code here
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
