--- a/.circleci/ansible/roles/setup/tasks/main.yml
+++ b/.circleci/ansible/roles/setup/tasks/main.yml
@@ -40,3 +40,7 @@
     src: /root/project/backend
     dest: /root
     force: no
+
+- name: "start web server"
+  shell: |
+    pm2 start /home/ubuntu/
