--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -272,3 +272,5 @@ workflows:
           requires: [deploy-infrastructure]
       - run-migrations:
           requires: [configure-infrastructure]
+      - deploy-frontend:
+          requires: [run-migrations]
