--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,9 +231,11 @@ jobs:
           name: Install dependencies
           command: |
             yum -y install tar gzip
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
-            . ~/.nvm/nvm.sh
-            nvm install --lts
+      - run:
+          name: Install Node
+          command: |
+            curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.31.3/install.sh | bash
+            nvm install node
       - attach_workspace:
           at: ~/
       - run:
