--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,7 +230,11 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            # your code here
             yum -y install tar gzip
+            # Install nodejs on Fedora Core based on nodesource website instructions
+            curl -sL https://rpm.nodesource.com/setup_lts.x | bash -
+            yum -y install nodejs
       - attach_workspace:
           at: ~/
       - run:
