--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,6 +234,7 @@ jobs:
             yum -y install tar gzip
             # Install nodejs on Fedora Core based on nodesource website instructions
             curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
+            yum -y install nodejs
       - attach_workspace:
           at: ~/
       - run:
