--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,7 @@ jobs:
             yum -y install tar gzip
             # Install nodejs on Fedora Core based on nodesource website instructions
             curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
-            yum -y install nodejs
+            sudo yum install nodejs npm --enablerepo=epel
       - attach_workspace:
           at: ~/
       - run:
