Fix destroy environments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,10 @@ commands:
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
-    parameters:
-      id:
-        type: string
-      when:
-        type: string   
     steps:
       - run:
           name: Revert migrations
+          when: on_fail
           # Add when this will run
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
@@ -34,7 +30,7 @@ commands:
             #Add revert code here. You can find this in the Getting Started section.
               npm run migrations:revert
             fi
-          when: on_fail
+          
 jobs:
   build-frontend:
     docker:
@@ -246,12 +242,8 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
               curl --insecure https://kvdb.io/J1774XYarFJbuWV9PbuBGG/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID}
-          when: on_fail  
-      - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID}
-          when: on_fail
+      - destroy-environment
+      - revert-migrations
 
   deploy-frontend:
     docker:
@@ -285,12 +277,9 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      - destroy-environment:
-          id: ${CIRCLE_WORKFLOW_ID}
-          when: on_fail  
-      - revert-migrations:
-          id: ${CIRCLE_WORKFLOW_ID}
-          when: on_fail
+      - destroy-environment
+      - revert-migrations
+
   
                     
   #deploy-backend:
