mv tasks ansible and generate job deploy backend

--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -46,7 +46,18 @@
     cd /home/ubuntu/backend
     npm install
     npm install --only=dev
-
-- name: "start web server"
+- name: Build package
   shell: |
-    pm2 start /home/ubuntu/
+    cd /home/ubuntu/backend
+    npm run build
+    cat .env
+    npm run prestart:prod
+- name: Start PM2
+  shell: |
+    cd /home/ubuntu/backend
+    pm2 start npm --no-automation --name "backend" -- run start
+- name: start pm2 for dist/main.js
+  become: no
+  shell: pm2 start main.js
+  args:
+    chdir: /home/ubuntu/backend/dist
