--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,11 +262,15 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
+          name: Verify inventory
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            sed -i '/^$/d' inventory.txt
+            cat inventory.txt
+      - run:
           name: Get backend url
           command: |
-            pwd
-            ls
-            cat .circleci/ansible/inventory.txt
             export BACKEND=$(cat .circleci/ansible/inventory.txt | head -2 | tail -1)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
@@ -285,24 +289,43 @@ jobs:
 
   
                     
-  #deploy-backend:
-  #  docker:
-  #    - image: python:3.7-alpine3.11
-  #  steps:
-  #    - checkout
-  #    - add_ssh_keys:
-  #        fingerprints:
-  #          - "f9:12:37:28:57:7b:c9:02:da:4a:5e:b0:23:c0:f0:54"
-  #    - attach_workspace:
-  #        at: ~/
-  #    - run:
-  #        name: Install dependencies
-  #        command: |
-  #          # your code here
-  #    - run:
-  #        name: Deploy backend
-  #        command: |
-  #          # your code here
+  deploy-backend:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "f9:12:37:28:57:7b:c9:02:da:4a:5e:b0:23:c0:f0:54"
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update ansible # install the dependencies needed for your playbook
+            apk add tar gzip curl jq
+            pip install awscli
+      - run:
+          name: Set env
+          command: |
+            echo ENVIROMENT=$ENVIROMENT > "backend/.env"
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> "backend/.env"
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> "backend/.env"
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> "backend/.env"
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> "backend/.env"
+            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+      - run:
+          name: Deploy backend
+          command: |
+            cd .circleci/ansible
+            sed -i '/^$/d' inventory.txt
+            BACKEND_IP=`cat inventory.txt | head -2 | tail -1`
+            echo "BACKEND_IP: ${BACKEND_IP}"
+            ansible-playbook -i inventory.txt deploy-backend.yml
 
 workflows:
   default:
