--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -30,29 +30,29 @@
     state: present
 
 
-#- name: Create directory
-#  file:
-#    path: /home/ubuntu/backend
-#    state: directory
-#
-#- name: Copy backend files to home server
-#  copy:
-#    src: /root/project/backend
-#    dest: /home/ubuntu/
-#
-#- name: Copy backend files to root server
-#  become: true
-#  copy:
-#    src: /root/project/backend
-#    dest: /root
-#    force: no
-#
-#- name: Install Node 
-#  shell: |
-#    cd /home/ubuntu/backend
-#    npm install
-#    npm install --only=dev
-#
-#- name: "start web server"
-#  shell: |
-#    pm2 start /home/ubuntu/
+- name: Create directory
+  file:
+    path: /home/ubuntu/backend
+    state: directory
+
+- name: Copy backend files to home server
+  copy:
+    src: /root/project/backend
+    dest: /home/ubuntu/
+
+- name: Copy backend files to root server
+  become: true
+  copy:
+    src: /root/project/backend
+    dest: /root
+    force: no
+
+- name: Install Node 
+  shell: |
+    cd /home/ubuntu/backend
+    npm install
+    npm install --only=dev
+
+- name: "start web server"
+  shell: |
+    pm2 start /home/ubuntu/
