--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -322,8 +322,10 @@ jobs:
           name: Deploy backend
           command: |
             cd .circleci/ansible
+            cat .circleci/ansible/inventory.txt
             sed -i '/^$/d' inventory.txt
-            BACKEND_IP=`cat inventory.txt | head -2 | tail -1`
+            cat .circleci/ansible/inventory.txt
+            BACKEND_IP=`cat .circleci/ansible/inventory.txt | head -2 | tail -1`
             echo "BACKEND_IP: ${BACKEND_IP}"
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment
