--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,11 +268,13 @@ jobs:
             cat inventory.txt
             sed -i '/^$/d' inventory.txt
             cat inventory.txt | head -2 | tail -1
+      - attach_workspace:
+          at: ~/
       - run:
           name: Get backend url
           command: |
-            cat inventory.txt | head -2 | tail -1
-            BACKEND=`cat inventory.txt | head -2 | tail -1`
+            cat .circleci/ansible/inventory.txt | head -2 | tail -1
+            BACKEND=`cat .circleci/ansible/inventory.txt | head -2 | tail -1`
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
