--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -355,6 +355,15 @@ jobs:
           command: |
             apk add tar gzip curl jq
             pip install awscli
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Verify inventory
+          command: |
+            cd .circleci/ansible
+            cat inventory.txt
+            sed -i '/^$/d' inventory.txt
+            cat inventory.txt | head -2 | tail -1
       - run:
           name: Get backend url
           command: |
@@ -363,7 +372,7 @@ jobs:
             export URL="http://$BACKEND_IP:3030/api/status"
             echo $URL
             curl $URL
-            if curl "${API_URL}/api/status" | grep "ok"
+            if curl "${URL}/api/status" | grep "ok"
             then
               return 0
             else
@@ -374,7 +383,7 @@ jobs:
           command: |
             echo $URL
             curl $URL
-            if curl "${API_URL}/api/status" | grep "ok"
+            if curl "${URL}/api/status" | grep "ok"
             then
               return 0
             else
