remove path url backend

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -383,7 +383,7 @@ jobs:
           command: |
             echo $URL
             curl $URL
-            if curl "${URL}/api/status" | grep "ok"
+            if curl "${URL}" | grep "ok"
             then
               return 0
             else
