--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,12 +372,6 @@ jobs:
             export URL="http://$BACKEND_IP:3030/api/status"
             echo $URL
             curl $URL
-            if curl "${URL}/api/status" | grep "ok"
-            then
-              return 0
-            else
-              return 1
-            fi
       - run:
           name: Backend smoke test.
           command: |
@@ -393,17 +387,17 @@ jobs:
           name: Frontend smoke test.
           command: |
             # your code here
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
+            FRONTL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${FRONT} 
+            if curl -s ${FRONT} | grep "Welcome"
             then
               # Change this to 0 after the job fails
               return 1
             else
               return 1
             fi
-      #- destroy-environment
-      #- revert-migrations
+      - destroy-environment
+      - revert-migrations
 
 workflows:
   default:
