--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -444,24 +444,24 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
-      - attach_workspace:
-          at: ~/
       - run:
           name: Get old stack workflow id
           command: |
             export OldWorkflowID=$(aws cloudformation \
               list-exports --query 'Exports[?Name==`WorkflowID`].Value' \
               --no-paginate --output text)
-            
             export STACKS=($aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)          
             echo Old Workflow Id: "${OldWorkflowID}"
             echo New Workflow Id: "${CIRCLE_WORKFLOW_ID}"
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
+              echo "---------------DELETE CONFIRMED-----------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
               aws cloudformation delete-stack --stack-name "udapeople-prod-backendstack-${OldWorkflowID}"
               aws cloudformation delete-stack --stack-name "udapeople-prod-frontendstack-${OldWorkflowID}"
+            else
+              echo "---------------CANNOT CLEANUP-----------------"
             fi
 
 workflows:
