--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -454,7 +454,7 @@ jobs:
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)          
             echo Old Workflow Id: "${OldWorkflowID}"
             echo New Workflow Id: "${CIRCLE_WORKFLOW_ID}"
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
               echo "---------------DELETE CONFIRMED-----------------"
               aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
