--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -436,6 +436,10 @@ jobs:
             
             echo OldWorkflowID: "${OldWorkflowID}"
             echo Current Workflow Id:: "${CIRCLE_WORKFLOW_ID:0:7}"
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - OldWorkflowID.txt
       - destroy-environment
       - revert-migrations
 
@@ -444,16 +448,16 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - attach_workspace:
+          at: ~/
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-              list-exports --query 'Exports[?Name==`WorkflowID`].Value' \
-              --no-paginate --output text)
+            export OldWorkflowID=$(cat ~/OldWorkflowID.txt)
             export STACKS=($aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
               --stack-status-filter CREATE_COMPLETE --no-paginate --output text)          
             echo Old Workflow Id: "${OldWorkflowID}"
-            echo New Workflow Id: "${CIRCLE_WORKFLOW_ID}"
+            echo New Workflow Id: "${CIRCLE_WORKFLOW_ID:0:7}"
             if [[ "${CIRCLE_WORKFLOW_ID:0:7}" != "${OldWorkflowID}" ]]
             then
               echo "---------------DELETE CONFIRMED-----------------"
