--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -448,6 +448,10 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install tar gzip
       - attach_workspace:
           at: ~/
       - run:
